--- a/public/assets/css/materialize.css
+++ b/public/assets/css/materialize.css
@@ -3,6 +3,11 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+.save-article {
+  float: right;
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
