reorganized routes and rewrote a few

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
         <h5 class="header col s12 light">Read the latest Overwatch news and save your favorite articles!</h5>
       </div>
       <div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light orange">Scrape New Articles!</a>
+        <a href="#" id="download-button" class="btn-large waves-effect waves-light orange scrape-articles">Scrape New Articles!</a>
       </div>
       <br><br>
 
@@ -58,8 +58,10 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="../assets/js/materialize.js"></script>
   <script src="../assets/js/init.js"></script>
+  <script src="../assets/js/scrape.js"></script>
   <script src="../assets/js/onclicks.js"></script>
 
   </body>
