--- a/views/newsfeed.handlebars
+++ b/views/newsfeed.handlebars
@@ -7,7 +7,7 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{this.title}}</span>
-          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons">add</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons">book</i></a>
         </div>
         <div class="card-action">
           <a href="{{this.link}}">{{this.link}}</a>
