hbs renders on dif route now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,8 +61,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="../assets/js/materialize.js"></script>
   <script src="../assets/js/init.js"></script>
-  <script src="../assets/js/scrape.js"></script>
-  <script src="../assets/js/onclicks.js"></script>
+  <script src="../assets/js/app.js"></script>
 
   </body>
 </html>
