--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,9 +38,9 @@
       <div class="row center">
         <h5 class="header col s12 light">Read the latest Overwatch news and save your favorite articles!</h5>
       </div>
-      <div class="row center">
+      {{!--<div class="row center">
         <a href="#" id="download-button" class="btn-large waves-effect waves-light orange scrape-articles">Scrape New Articles!</a>
-      </div>
+      </div>--}}
       <br><br>
 
     </div>
