--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -7,8 +7,8 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{this.title}}</span>
-          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons">mode_edit</i></a>
-          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons">delete</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light orange delete-article"><i class="material-icons">delete</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light orange edit-note modal-trigger" href="#modal1"><i class="material-icons">mode_edit</i></a>
         </div>
         <div class="card-action">
           <a href="{{this.link}}">{{this.link}}</a>
@@ -16,6 +16,36 @@
       </div>
     </div>
   </div>
+
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+  <div class="modal-content">
+    <h4>New Note</h4>
+
+    <div class="row">
+       <div class="input-field col s12">
+          <textarea id="title-input" type="text" class="materialize-textarea"></textarea>
+          <label for="title-input">Title</label>
+        </div>
+    </div>
+
+      <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="body-input" class="materialize-textarea"></textarea>
+          <label for="body-input">Body</label>
+        </div>
+      </div>
+    </form>
+  </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#modal1" class=" modal-action modal-close waves-effect waves-green btn-flat" id="save-note">Save Note</a>
+  </div>
+</div>
+
 
   {{/each}}
 
