save article to bookmarks page works

--- a/views/newsfeed.handlebars
+++ b/views/newsfeed.handlebars
@@ -7,10 +7,10 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{this.title}}</span>
-          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons">book</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light orange save-article"><i class="material-icons" data-id={{this._id}}>book</i></a>
         </div>
         <div class="card-action">
-          <a data-id={{this._id}} href="{{this.link}}">{{this.link}}</a>
+          <a href="{{this.link}}">{{this.link}}</a>
         </div>
       </div>
     </div>
