scrape new articles button works but using settimeout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Saved Articles</a></li>
+        <li><a href="#" id="bookmarks">Saved Articles</a></li>
       </ul>
 
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -38,9 +38,9 @@
       <div class="row center">
         <h5 class="header col s12 light">Read the latest Overwatch news and save your favorite articles!</h5>
       </div>
-      {{!--<div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light orange scrape-articles">Scrape New Articles!</a>
-      </div>--}}
+      <div class="row center">
+        <a href="#" id="scrape-articles" class="btn-large waves-effect waves-light orange">Scrape New Articles!</a>
+      </div>
       <br><br>
 
     </div>
